<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_information_person"
            android:icon="@drawable/baseline_person_outline_24"
            android:title="@string/title_nav_information_person"/>
        <item android:id="@+id/nav_user"
            android:icon="@drawable/baseline_star_outline_24"
            android:title="@string/title_nav_user"/>
        <item android:id="@+id/nav_staff"
            android:icon="@drawable/baseline_chat_bubble_outline_24"
            android:title="@string/title_nav_staff"/>
        <item android:id="@+id/nav_product"
            android:icon="@drawable/baseline_description_24"
            android:title="@string/title_nav_product"/>
        <item android:id="@+id/nav_category_product"
            android:icon="@drawable/baseline_description_24"
            android:title="@string/title_nav_category_product"/>
        <item android:id="@+id/nav_order"
            android:icon="@drawable/baseline_shopping_cart_24"
            android:title="@string/title_nav_order"/>
        <item android:id="@+id/nav_statistic_report"
            android:icon="@drawable/baseline_equalizer_24"
            android:title="@string/title_nav_statistic_report"/>
        <item android:title="Quản lý khuyến mãi"
            android:id="@+id/nav_promotion_management"
            android:icon="@drawable/baseline_production_quantity_limits_24"/>
    </group>


    <item android:title=""/>
    <item android:title=""/>
    <item android:title=""/>
    <item android:id="@+id/nav_logout"
        android:icon="@drawable/baseline_logout_24"
        android:title="@string/title_nav_log_out"/>
</menu>