<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8B0305"
    android:orientation="vertical"
    tools:context=".Controller.Activity.User.Orders">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:src="@drawable/arow_left_icon_white" />

        <TextView
            android:id="@+id/textView4"
            style="@style/h1_bold_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Tình trạng đơn hàng" />
    </androidx.appcompat.widget.Toolbar>

    <com.example.hancafe.Controller.Activity.Custom.CustomTabLayout
        android:id="@+id/tlOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:tabTextColor="@color/white"
        app:tabSelectedTextColor="@color/white"
        app:tabBackground="@color/red"
        app:tabIndicatorColor="@android:color/transparent"
        app:tabIndicatorFullWidth="true"
        app:tabMode="scrollable">
        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_confirm" />
        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_delivery" />
        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_complete" />
        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_cancel" />
    </com.example.hancafe.Controller.Activity.Custom.CustomTabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vpOrder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearAdmin"
        android:background="@color/white"
        android:saveEnabled="false"
        android:contentDescription="Chi tiết đặt hàng" />

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_weight="1"-->
<!--        android:background="@drawable/body_background"-->
<!--        android:orientation="vertical">-->


<!--        <HorizontalScrollView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:scrollbars="none">-->

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center"-->
<!--                android:orientation="horizontal">-->

<!--                <TextView-->
<!--                    android:id="@+id/confirm"-->
<!--                    style="@style/h2_bold"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:padding="16dp"-->
<!--                    android:text="Chờ xác nhận" />-->

<!--                <TextView-->
<!--                    android:id="@+id/delivering"-->
<!--                    style="@style/h2_bold"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:padding="16dp"-->
<!--                    android:text="Đang giao hàng" />-->

<!--                <TextView-->
<!--                    android:id="@+id/received"-->
<!--                    style="@style/h2_bold"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:padding="16dp"-->
<!--                    android:text="Đã nhận" />-->

<!--                <TextView-->
<!--                    android:id="@+id/canceled"-->
<!--                    style="@style/h2_bold"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:padding="16dp"-->
<!--                    android:text="Đã hủy" />-->


<!--            </LinearLayout>-->

<!--        </HorizontalScrollView>-->

<!--        <FrameLayout-->
<!--            android:id="@+id/container"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent" />-->


<!--    </LinearLayout>-->


</LinearLayout>