<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Chuyển đổi trạng thái đơn đặt hàng"
        android:textSize="20dp"
        android:background="@color/red"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivBtsCategoryItemImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:scaleType="centerCrop"
            android:layout_marginLeft="10dp"
            android:src="@drawable/milk_coffee" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvBtsCategoryItemId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Item Id"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvBtsCategoryItemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Item Name"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvBtsCategoryItemPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="100000"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvBtsCategoryItemDateTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:gravity="center|right"
            android:text="01/01/2024"
            android:textSize="18sp"
            android:textColor="@color/black" />

    </LinearLayout>

<!--    <Spinner-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="50dp"-->
<!--        android:id="@+id/spnConvertStatusOrderManagement"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:layout_marginBottom="10dp" />-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/btnConfirmOrderManagement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:text="@string/title_confirm"
            android:background="@drawable/custom_background_linear_container"
            android:backgroundTint="@color/red"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/btnDeliveryOrderManagement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/title_delivery"
            android:background="@drawable/custom_background_linear_container"
            android:backgroundTint="@color/red"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/btnCompleteOrderManagement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:text="@string/title_complete"
            android:background="@drawable/custom_background_linear_container"
            android:backgroundTint="@color/red"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/btnCancelOrderManagement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/title_cancel"
            android:background="@drawable/custom_background_linear_container"
            android:backgroundTint="@color/red"
            android:textColor="@color/white"/>
    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:padding="10dp"-->
<!--        android:orientation="horizontal">-->

<!--        <Button-->
<!--            android:id="@+id/btnHuyConvertOrderManagement"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginRight="20dp"-->
<!--            android:layout_weight="1"-->
<!--            android:background="@drawable/custom_background_linear_container"-->
<!--            android:backgroundTint="@color/red"-->
<!--            android:text="Hủy"-->
<!--            android:textColor="@color/white" />-->

<!--        <Button-->
<!--            android:id="@+id/btnSubmitConvertOrderManagement"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:background="@drawable/custom_background_linear_container"-->
<!--            android:backgroundTint="@color/red"-->
<!--            android:text="Xác nhận"-->
<!--            android:textColor="@color/white" />-->
<!--    </LinearLayout>-->

</LinearLayout>